- Add avatar wrapper styles for drawer header - Fixes to top app bar logo on small screens

--- a/resources/scss/tsn/assets.scss
+++ b/resources/scss/tsn/assets.scss
@@ -1,4 +1,18 @@
 .tsn-header-logo {
-  width: $triple-side;
+  min-width: $triple-side;
   height: $triple-vertical;
+}
+
+.drawer-avatar-wrapper {
+  display: inline-block;
+  vertical-align: middle;
+
+  img {
+    width: 30%;
+  }
+}
+
+.drawer-header-wrapper {
+  display: inline-block;
+  width: 68%;
 }
